--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "server": "nodemon server.js",
+    "server": "node server.js",
     "frontent-client": "npm start --prefix,/frontent-client",
     "dev": "concurrently \"npm start\" \"npm run frontent-client\""
   },
